@@ -257,3 +257,5 @@ test resize {array resize} -body {
 0
 43
 }
+
+cleanupTests
