@@ -119,3 +119,5 @@ FALSE
 TRUE
 Duro%$-
 }
+
+cleanupTests
