@@ -1832,3 +1832,5 @@ Lithium
 Z <= 4
 Beryllium
 }
+
+cleanupTests
