@@ -4,6 +4,8 @@ Summary of Changes to DuroDBMS
 
 DuroDBMS 0.23
 
+ - EXPLAIN now supported for local tables
+
  - Fixed bug that caused secondary index corruption.
 
  - Upgrade to BerkeleyDB 6.1.
